--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,21 +18,38 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+texture:
+  title: Kinkonomicon
+  tagline: aka Garlic bread is the new fetish
+  style: black
+  showNav: true
+  date_format: "%b %-d, %Y"
+
+  navigation:
+    - title: Home
+      url: "/"
+    - title: About
+      url: "/about"
+    - title: Fetish list
+      url: "/fetish-list"
+    - title: Participate
+      url: https://github.com/kinkonomicon/kinkonomicon.github.io
+
+title: Kinkonomicon
+iconURL: assets/default-icon.png
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A somewhat centralized repository for fetish stores.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://kinkonomicon.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-theme: minima
+remote_theme: thelehhman/texture
+theme: texture
 plugins:
   - jekyll-feed
+
+permalink: :slug
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
